<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"

            android:text="@string/client_name" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#BEBEBE" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_weight="3"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/new_orders_imageView_client_avatar"
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:padding="10dp"
                    android:src="@mipmap/ic_launcher" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/new_orders_editText_firstname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:drawableLeft="@mipmap/ic_action_person"
                    android:drawablePadding="10dp"
                    android:hint="@string/firstname"
                    android:padding="10dp" />

                <EditText
                    android:id="@+id/new_orders_editText_lastname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:drawableLeft="@mipmap/ic_action_person"
                    android:drawablePadding="10dp"
                    android:hint="@string/lastname"
                    android:padding="10dp" />
            </LinearLayout>
        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"

            android:text="@string/client_contacts" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#BEBEBE" />

        <EditText
            android:id="@+id/new_orders_editText_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:drawableLeft="@android:drawable/ic_dialog_email"
            android:drawablePadding="10dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="10dp" />

        <EditText
            android:id="@+id/new_orders_editText_phonenumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:drawableLeft="@android:drawable/ic_menu_call"
            android:drawablePadding="10dp"
            android:hint="@string/phonenumber"
            android:inputType="phone"
            android:padding="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"

            android:text="@string/fabric_info" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#BEBEBE" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_weight="3"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/new_orders_imageView_fabric_avatar"
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:padding="10dp"
                    android:src="@mipmap/ic_launcher" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/new_orders_editText_color"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:hint="@string/color"
                    android:inputType="text"
                    android:padding="10dp" />

                <EditText
                    android:id="@+id/new_orders_editText_material"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:hint="@string/material"
                    android:inputType="text"
                    android:padding="10dp" />
            </LinearLayout>

        </LinearLayout>

        <EditText
            android:id="@+id/new_orders_editText_order_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/order_description"
            android:inputType="textMultiLine" android:layout_margin="10dp"
            android:lines="3" android:gravity="top"
            android:padding="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"

            android:text="@string/payment_info" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#BEBEBE" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/new_orders_editText_cost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:drawablePadding="10dp"
                android:hint="@string/cost"
                android:inputType="numberDecimal"
                android:padding="10dp" />

            <EditText
                android:id="@+id/new_orders_editText_discount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:drawablePadding="10dp"
                android:hint="@string/discount"
                android:inputType="numberDecimal"
                android:padding="10dp" />

            <EditText
                android:id="@+id/new_orders_editText_paid_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:drawablePadding="10dp"
                android:hint="@string/paid"
                android:inputType="numberDecimal"
                android:padding="10dp" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"

            android:text="@string/completion_info" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#BEBEBE" />

        <CheckBox
            android:id="@+id/new_orders_checkBox_completed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:padding="10dp"
            android:text="@string/completed" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"

            android:text="@string/collection_info" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#BEBEBE" />

        <CheckBox
            android:id="@+id/new_orders_checkBox_collected"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:padding="10dp"
            android:text="@string/collected" />

        <Button
            android:id="@+id/new_orders_button_save_order"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/save_client_order" />
    </LinearLayout>


</ScrollView>