<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:drawable/alert_light_frame"
    android:orientation="vertical"
    android:padding="20dp">

    <ImageView
        android:id="@+id/list_client_orders_imageView_client_avatar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@mipmap/ic_launcher" />

    <LinearLayout
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/list_client_orders_imageView_client_avatar"
        android:orientation="vertical">

        <TextView
            android:id="@+id/list_client_orders_textView_client_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/client_name" />

        <TextView
            android:id="@+id/list_client_orders_textView_order_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_description" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/list_client_orders_textView_completed_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/completed_status" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:gravity="right"
                android:text="@string/and" />

            <TextView
                android:id="@+id/list_client_orders_textView_collected_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/collected_status" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>